fix(card/menu-toggle/check): alignment bugs

--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -388,6 +388,8 @@
       align-self: stretch;
 
       .#{$check}__input {
+        --#{$check}__input--TranslateY: 0;
+
         align-self: center;
       }
     }
